--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "todo-app-kata-1",
+  "homepage": "https://bullscin.github.io/todo-kata/",
+  "name": "to-do-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
