--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint src/**/*.jsx",
     "lint:fix": "eslint src/**/*.jsx --fix",
     "format": "prettier --write \"src/**/*.jsx\"",
-    "deploy": "npm run lint && npm run format && git add . && git commit -m \"Lint and format\" && git push origin /to-do-timer && gh-pages -d build -b /to-do-timer",
+    "deploy": "npm run lint && npm run format && git add . && git commit -m \"Lint and format\" && git push origin \"/to-do-timer\" && gh-pages -d build -b \"/to-do-timer\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
